configured with "auth.userDetailsService(UserService)"

--- a/src/main/resources/templates/employee-list.html
+++ b/src/main/resources/templates/employee-list.html
@@ -18,6 +18,7 @@
         <th>Surname</th>
         <th>Department</th>
         <th>Salary</th>
+        <th>Role</th>
         <th>Operations</th>
       </tr>
       </thead>
@@ -28,6 +29,7 @@
         <td th:text="*{emp.surName}"></td>
         <td th:text="*{emp.department}"></td>
         <td th:text="*{emp.salary}"></td>
+        <td th:text="*{emp.roles}"> </td>
 
         <td>
           <button
