--- a/src/main/resources/templates/employee-update.html
+++ b/src/main/resources/templates/employee-update.html
@@ -20,6 +20,9 @@
   <label for="salary">Salary</label>
   <input type="text" th:field="*{salary}" id="salary" placeholder="Write salary">
   <br><br>
+  <label for="password">Password</label>
+  <input type="text" th:field="*{password}" id="password" placeholder="Write salary">
+  <br><br>
   <input type="submit" value="Update">
 </form>
 </body>
