--- a/src/main/resources/templates/employee-list.html
+++ b/src/main/resources/templates/employee-list.html
@@ -30,12 +30,12 @@
         <td th:text="*{emp.salary}"></td>
         <td>
           <button
-                th:href="@{/employee-update/{id}(id=${emp.id})}"
+                th:href="@{/admin/employee-update/{id}(id=${emp.id})}"
                 onclick="window.location.href=(this.getAttribute('href'))">Update</button>
 
 
           <button
-            th:href = "@{/employee-delete/{id}(id=${emp.id})}"
+            th:href = "@{/admin/employee-delete/{id}(id=${emp.id})}"
             onclick="window.location.href=(this.getAttribute('href'))">Delete</button>
         </td>
 
@@ -45,7 +45,7 @@
   </div>
 
   <br>
-  <input type="button" value="Add" onclick="window.location.href='/employee-create'"/>
+  <input type="button" value="Add" onclick="window.location.href='/admin/employee-create'"/>
 </div>
 </body>
 </html>
