--- a/src/main/resources/templates/employee-list.html
+++ b/src/main/resources/templates/employee-list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
   <meta charset="UTF-8">
   <title>Employees</title>
@@ -18,6 +18,7 @@
         <th>Surname</th>
         <th>Department</th>
         <th>Salary</th>
+        <th>Role(s)</th>
         <th>Operations</th>
       </tr>
       </thead>
@@ -28,8 +29,10 @@
         <td th:text="*{emp.surName}"></td>
         <td th:text="*{emp.department}"></td>
         <td th:text="*{emp.salary}"></td>
+        <td th:text="*{emp.toString()}"></td>
+
         <td>
-          <button
+          |<button
                 th:href="@{/admin/employee-update/{id}(id=${emp.id})}"
                 onclick="window.location.href=(this.getAttribute('href'))">Update</button>
 
@@ -46,6 +49,8 @@
 
   <br>
   <input type="button" value="Add" onclick="window.location.href='/admin/employee-create'"/>
+  <br> <br>
 </div>
+<div th:insert="footer :: copy"></div>
 </body>
 </html>
