--- a/src/main/resources/templates/employee-list.html
+++ b/src/main/resources/templates/employee-list.html
@@ -19,6 +19,7 @@
         <th>Department</th>
         <th>Salary</th>
         <th>Role(s)</th>
+        <th>Password</th>
         <th>Operations</th>
       </tr>
       </thead>
@@ -30,6 +31,7 @@
         <td th:text="*{emp.department}"></td>
         <td th:text="*{emp.salary}"></td>
         <td th:text="*{emp.toString()}"></td>
+        <td th:text="*{emp.password}"></td>
 
         <td>
           |<button
