--- a/src/main/resources/templates/employee-update.html
+++ b/src/main/resources/templates/employee-update.html
@@ -28,11 +28,15 @@
   <br><br>
 
   <div th:switch="*{password}">
-    <div th:case="null">-->
+    <div th:case="null">
       <label for="password">Password</label>
       <input type="password" th:field="*{password}" id="password" placeholder="Write password">
     </div>
-    <div th:case="*"></div>
+    <div th:case="*">
+      <label>
+        <input type="hidden" th:field="*{password}" placeholder="Write password">
+      </label>
+    </div>
   </div>
 
 
