--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,83 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3" xmlns:class="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
+
+<div class="container-fluid"> <!--style="background-color: grey"-->
+
+    <!-- **************** the start of nav ********************** -->
+    <div class="row bg-black">
+        <div class="col-md-11">
+            <b style="color: #badce3">user@mail.ru ...</b>
+        </div>
+        <div class="col-md-1">
+            <a class="btn btn-default" href="/logout" role="button">Logout</a>
+        </div>
+    </div>
+    <!-- **************** the end of nav ********************** -->
+
+    <div class="container-fluid gx-0" style="height: 850px">
+        <div class="row bg-light " style="height: 100%">
+            <div class="col-md-2 gy-3 bg-body px-0">
+                <div class="d-grid gap-2">
+                    <button type="button" class="btn btn-primary text-start" style="border-radius: 2px">
+                        User
+                    </button>
+                </div>
+            </div>
+
+            <div class="col-md-10 gy-4 px-4">
+                <!-- the follow column is for table-->
+                <div class="col-12">
+                    User information page
+                </div>
+                <div class="col-12 bg-light border border-bottom-0">
+                    About user
+                </div>
+                <div class="col-12 bg-body border px-3 pb-3">
+                    <table class="table caption-top table-striped table-hover
+                        bg-body table-borderless border-top">
+                        <caption></caption>
+                        <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Age</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Role</th>
+                        </tr>
+                        </thead>
+
+                        <tbody>
+                        <tr class="table-active border-top">
+                            <td>1</td>
+                            <td>Mark</td>
+                            <td>Otto</td>
+                            <td>@mdo</td>
+                            <td>@mdo</td>
+                            <td>@mdo</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 </html>
