--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-
+    <link href="/static/css/myClass.css" rel="stylesheet">
 
 </head>
 <body>
@@ -15,7 +15,7 @@
 <div class="container-fluid"> <!--style="background-color: grey"-->
 
     <!-- **************** the start of nav ********************** -->
-    <div class="row bg-black">
+    <div class="row bg-dark">
         <div class="col-md-11">
             <b style="color: #badce3">user@mail.ru ...</b>
         </div>
@@ -41,7 +41,7 @@
                     User information page
                 </div>
                 <div class="col-12 bg-light border border-bottom-0">
-                    About user
+                    <h6 class="ps-3 py-2 m-0 first-table">About user</h6>
                 </div>
                 <div class="col-12 bg-body border px-3 pb-3">
                     <table class="table caption-top table-striped table-hover
