--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -39,9 +39,44 @@
         <td th:text="${employees.toString()}"></td>
     </tr>
     </tbody>
+
 </table>
 
 <br><br>
+
+
+
+
+<!-- ******************************************************************************************************* -->
+<!-- ******************************************************************************************************* -->
+
+<div class="container-fluid">
+    <ul class="nav nav-pills nav-justified">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Active</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Much longer nav link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link disabled">Disabled</a>
+        </li>
+    </ul>
+</div>
+
+<!-- ******************************************************************************************************* -->
+<!-- ******************************************************************************************************* -->
+
+
+
+
+
+
+
+
 
 <div th:insert="footer :: copy"></div>
 </body>
