--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -2,11 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
 <body>
 <div th:fragment="copy">
-  <h3>____________________________________________________</h3>
-  Logged in user: <b th:inline="text"> [[${#httpServletRequest.remoteUser}]] </b>
-  <br><br>
   <form th:action="@{/logout}" method="POST">
-    <input type="submit" value="Logout"/>
+    <!--<input type="submit" value="Logout"/>-->
+    <h2><a href="/logout">Logout</a></h2>
   </form>
 </div>
 </body>
