--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,19 +11,84 @@
 
 </head>
 <body>
-
-<div class="container-fluid"> <!--style="background-color: grey"-->
+<header>
+ <!--style="background-color: grey"-->
 
     <!-- **************** the start of nav ********************** -->
-    <div class="row bg-dark">
-        <div class="col-md-11">
-            <b style="color: #badce3">user@mail.ru ...</b>
+
+    <div class="row text-bg-dark py-2 m-0" style="color: papayawhip">
+        <div class="col-6">
+            <h5 class="nav-item">
+                user
+            </h5>
         </div>
-        <div class="col-md-1">
-            <a class="btn btn-default" href="/logout" role="button">Logout</a>
+        <div class="col-6 text-end">
+            <h5 class="nav-item">
+                <a href="/logout" style="text-decoration:none;color: gray">Logout</a>
+            </h5>
         </div>
     </div>
+</header>
     <!-- **************** the end of nav ********************** -->
+
+<main>
+    <div class="container-fluid" style="height: 850px">
+        <div class="row bg-light " style="height: 100%">
+        <div class="col-2  bg-body px-0 pt-3">
+            <div class="d-grid">
+                <button type="button" class="btn btn-primary text-start" style="border-radius: 2px">
+                    User
+                </button>
+                <h6><a href="/logout" style="text-decoration:none;color: #462222">Logout</a></h6>
+            </div>
+        </div>
+
+        <div class="col-md-10 px-4 pt-3 bg-light">
+            <!-- the follow column is for table-->
+            <div class="col-12">
+                <h4>User information page</h4>
+            </div>
+            <div class="col-12 bg-light border border-bottom-0">
+                <h6 class="ps-3 py-2 m-0 first-table">About user</h6>
+            </div>
+            <div class="col-12 bg-body border px-3 pb-3">
+                <table class="table caption-top table-striped table-hover
+                        bg-body table-borderless border-top">
+                    <caption></caption>
+                    <thead>
+                    <tr>
+                        <th scope="col">ID</th>
+                        <th scope="col">First Name</th>
+                        <th scope="col">Last Name</th>
+                        <th scope="col">Age</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Role</th>
+                    </tr>
+                    </thead>
+
+                    <tbody>
+                    <tr class="table-active border-top">
+                        <td>1</td>
+                        <td>Mark</td>
+                        <td>Otto</td>
+                        <td>@mdo</td>
+                        <td>@mdo</td>
+                        <td>@mdo</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    </div>
+</main>
+
+
+<!--
+<div class="container-fluid">
+<div class="row">
+    <div class="col">
+
 
     <div class="container-fluid gx-0" style="height: 850px">
         <div class="row bg-light " style="height: 100%">
@@ -36,7 +101,7 @@
             </div>
 
             <div class="col-md-10 gy-4 px-4">
-                <!-- the follow column is for table-->
+                &lt;!&ndash; the follow column is for table&ndash;&gt;
                 <div class="col-12">
                     User information page
                 </div>
@@ -74,6 +139,9 @@
         </div>
     </div>
 </div>
+</div>
+</div>
+-->
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
