--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -3,81 +3,74 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5" lang="en">
 <head>
     <title>Profile</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 </head>
 <body>
-<h1><span sec:authentication="name"></span>, welcome spring boot security page!</h1>
-<br><br>
+<!-- ******************************************************************************************************* -->
+<!-- ********************************************* Nav bar ************************************************* -->
 
-
-<h2>Your profile information</h2>
-
-
-<table>
-    <tbody>
-    <tr>
-        <td>Id: </td>
-        <td colspan="2" th:text="${employees.id}"></td>
-    </tr>
-    <tr>
-        <td>name: </td>
-        <td colspan="2" th:text="${employees.name}"></td>
-    </tr>
-    <tr>
-        <td>surname: </td>
-        <td colspan="2" th:text="${employees.surName}"></td>
-    </tr>
-    <tr>
-        <td>department: </td>
-        <td colspan="2" th:text="${employees.department}"></td>
-    </tr>
-    <tr>
-        <td>salary: </td>
-        <td colspan="2" th:text="${employees.salary}"></td>
-    </tr>
-    <tr>
-        <td>roles: </td>
-        <td th:text="${employees.toString()}"></td>
-    </tr>
-    </tbody>
-
-</table>
-
-<br><br>
-
-
-
+<header>
+    <div th:insert="header :: copy"></div>
+</header>
 
 <!-- ******************************************************************************************************* -->
 <!-- ******************************************************************************************************* -->
 
-<div class="container-fluid">
-    <ul class="nav nav-pills nav-justified">
-        <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Much longer nav link</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-        </li>
-    </ul>
-</div>
+<main>
+    <div class="container-fluid" style="height: 850px">
+        <div class="row bg-light " style="height: 100%">
+            <div class="col-2  bg-body px-0 pt-3">
+                <div class="d-grid">
+                    <button type="button" class="btn btn-primary text-start"
+                            style="border-radius: 2px" onclick=window.location.href='/user'>
+                        User
+                    </button>
+                    <input type="button" value="Add" onclick="window.location.href='/admin/employee-create'"/>
+                </div>
+            </div>
 
-<!-- ******************************************************************************************************* -->
-<!-- ******************************************************************************************************* -->
+            <div class="col-md-10 px-4 pt-3 bg-light">
+                <!-- the follow column is for table-->
+                <div class="col-12">
+                    <h4>User information page</h4>
+                </div>
+                <div class="col-12 bg-light border border-bottom-0">
+                    <h6 class="ps-3 py-2 m-0 first-table">About user</h6>
+                </div>
+                <div class="col-12 bg-body border px-3 pb-3">
+                    <table class="table caption-top table-striped table-hover
+                        bg-body table-borderless border-top">
+                        <caption></caption>
+                        <thead>
+                        <tr>
+                            <th scope="col">ID</th>
+                            <th scope="col">First Name</th>
+                            <th scope="col">Last Name</th>
+                            <th scope="col">Department</th>
+                            <th scope="col">Salary</th>
+                            <th scope="col">Role</th>
+                        </tr>
+                        </thead>
 
+                        <tbody>
 
-
-
-
-
-
-
-
-<div th:insert="footer :: copy"></div>
+                        <tr class="table-active border-top">
+                            <td th:text="${employees.id}"></td>
+                            <td th:text="${employees.name}"></td>
+                            <td th:text="${employees.surName}"></td>
+                            <td th:text="${employees.department}"></td>
+                            <td th:text="${employees.salary}"></td>
+                            <td th:text="${employees.roles}"></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
 </body>
 </html>
