--- a/src/main/resources/templates/employee-list.html
+++ b/src/main/resources/templates/employee-list.html
@@ -1,135 +1,184 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<!doctype html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3" xmlns:class="http://www.w3.org/1999/xhtml">
 <head>
-  <meta charset="UTF-8">
-  <title>Employees</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="/css/bootstrap.min.css"  rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title> demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="/static/css/myClass.css" rel="stylesheet">
 </head>
 <body>
 
 
-<div th:switch="${employees}">
-  <h2 th:case="null">No users yet!</h2>
-  <div th:case="*" >
-<table class="table table-hover">
-  <thead>
-  <tr>
-    <th>Id</th>
-    <th>Name</th>
-    <th>Surname</th>
-    <th>Department</th>
-    <th>Salary</th>
-    <th>Role(s)</th>
-    <th>Password</th>
-    <th>Operations</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr>
-    <th scope="row">1</th>
-    <td>Mark</td>
-    <td>Otto</td>
-  </tr>
-  <tr>
-    <th scope="row">2</th>
-    <td>Jacob</td>
-    <td>Thornton</td>
-  </tr>
 
-  <tr th:each="emp : ${employees}">
-    <th scope="row" th:text="*{emp.id}"></th>
-    <td th:text="*{emp.name}"></td>
-    <td th:text="*{emp.surName}"></td>
-    <td th:text="*{emp.department}"></td>
-    <td th:text="*{emp.salary}"></td>
-    <td th:text="*{emp.roles}"></td>
-    <td th:text="*{emp.password}"></td>
-    <td>
-      <button th:href="@{/admin/employee-update/{id}(id=${emp.id})}"
-            onclick="window.location.href=(this.getAttribute('href'))">Update</button>
-      <button th:href = "@{/admin/employee-delete/{id}(id=${emp.id})}"
-              onclick="window.location.href=(this.getAttribute('href'))">Delete</button>
-    </td>
-  </tr>
-  </tbody>
-</table>
-  </div>
-  <br>
-  <input type="button" value="Add" onclick="window.location.href='/admin/employee-create'"/>
-  <br> <br>
+<!-- ******************************************************************************************************* -->
+<header>
+<div class="row text-bg-dark py-2 m-0" style="color: papayawhip">
+    <div class="col-6">
+        <h6 class="nav-item">
+            <b sec:authentication="name"></b> <b>with roles</b>: <span th:text="${#authorization.authentication.getAuthorities()}"></span>
+
+        </h6>
+    </div>
+    <div class="col-6 text-end">
+        <form th:action="@{/logout}" method="POST">
+            <!--<input type="submit" value="Logout"/>-->
+            <h6><a href="/logout" style="text-decoration:none;color: gray">Logout</a></h6>
+        </form>
+    </div>
 </div>
-
-
-<div class="container">
-  <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="@{/admin/employee-update}">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Library</li>
-    </ol>
-  </nav>
-</div>
-
-
-
-
-
-
-
-
+</header>
+<!-- ******************************************************************************************************* -->
 
 
 <!--<div th:switch="${employees}">
-  <h2 th:case="null">No users yet!</h2>
-  <div th:case="*" >
-    <h2>Users</h2>
-    <table>
-      <thead>
-      <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Surname</th>
-        <th>Department</th>
-        <th>Salary</th>
-        <th>Role(s)</th>
-        <th>Password</th>
-        <th>Operations</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr th:each="emp : ${employees}">
-        <td th:text="*{emp.id}"></td>
-        <td th:text="*{emp.name}"></td>
-        <td th:text="*{emp.surName}"></td>
-        <td th:text="*{emp.department}"></td>
-        <td th:text="*{emp.salary}"></td>
-        <td th:text="*{emp.roles}"></td>
-        <td th:text="*{emp.password}"></td>
+    <h2 th:case="null">No users yet!</h2>
+    <div th:case="*">
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>Id</th>
+                <th>Name</th>
+                <th>Surname</th>
+                <th>Department</th>
+                <th>Salary</th>
+                <th>Role(s)</th>
+                <th>Password</th>
+                <th>Operations</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+            </tr>
+            <tr>
+                <th scope="row">2</th>
+                <td>Jacob</td>
+                <td>Thornton</td>
+            </tr>
 
-        <td>
-          |<button
-                th:href="@{/admin/employee-update/{id}(id=${emp.id})}"
-                onclick="window.location.href=(this.getAttribute('href'))">Update</button>
-
-
-          <button
-            th:href = "@{/admin/employee-delete/{id}(id=${emp.id})}"
-            onclick="window.location.href=(this.getAttribute('href'))">Delete</button>
-        </td>
-
-      </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <br>
-  <input type="button" value="Add" onclick="window.location.href='/admin/employee-create'"/>
-  <br> <br>
+            <tr th:each="emp : ${employees}">
+                <th scope="row" th:text="*{emp.id}"></th>
+                <td th:text="*{emp.name}"></td>
+                <td th:text="*{emp.surName}"></td>
+                <td th:text="*{emp.department}"></td>
+                <td th:text="*{emp.salary}"></td>
+                <td th:text="*{emp.roles}"></td>
+                <td th:text="*{emp.password}"></td>
+                <td>
+                    <button th:href="@{/admin/employee-update/{id}(id=${emp.id})}"
+                            onclick="window.location.href=(this.getAttribute('href'))">Update
+                    </button>
+                    <button th:href="@{/admin/employee-delete/{id}(id=${emp.id})}"
+                            onclick="window.location.href=(this.getAttribute('href'))">Delete
+                    </button>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <br>
+    <input type="button" value="Add" onclick="window.location.href='/admin/employee-create'"/>
+    <br> <br>
 </div>-->
-<div th:insert="footer :: copy"></div>
+
+
+<!-- ******************************************************************************************************* -->
+<!-- ********************************************* Nav bar ************************************************* -->
+
+
+<!-- ******************************************************************************************************* -->
+<!-- ******************************************************************************************************* -->
+
+
+<main>
+    <div class="container-fluid" style="height: 850px">
+        <div class="row bg-light" style="height: 100%">
+            <div class="col-2  bg-body px-0 pt-3">
+                <div class="d-grid">
+                    <!--<button type="button" class="btn btn-primary text-start"
+                            style="border-radius: 2px" onclick=window.location.href='/user'>
+                        User
+                    </button>-->
+                    <ul class="nav nav-pills">
+                        <li class="nav-item mb-2">
+                            <a class="nav-link"  href="/user">Активная</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="/admin/employees">Ссылка</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-md-10 px-4 pt-3 bg-light">
+                <!-- the follow column is for table-->
+                <div class="col-12">
+                    <h4>User information page</h4>
+                </div>
+                <div class="col-12 bg-light border border-bottom-0">
+                    <h6 class="ps-3 py-2 m-0 first-table">About user</h6>
+                </div>
+                <div class="col-12 bg-body border px-3 pb-3">
+
+                    <div th:switch="${employees}">
+                        <h2 th:case="null">No users yet!</h2>
+                        <div th:case="*">
+                            <table class="table caption-top table-striped table-hover bg-body table-borderless border-top">
+                                <caption></caption>
+                              <thead>
+                              <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">First Name</th>
+                                <th scope="col">Last Name</th>
+                                <th scope="col">Department</th>
+                                <th scope="col">Salary</th>
+                                <th scope="col">Role</th>
+                                <th scope="col">Function</th>
+                              </tr>
+                              </thead>
+
+                                <tbody>
+
+                                <tr th:each="emp : ${employees}">
+                                    <td th:text="*{emp.id}"></td>
+                                    <td th:text="*{emp.name}"></td>
+                                    <td th:text="*{emp.surName}"></td>
+                                    <td th:text="*{emp.department}"></td>
+                                    <td th:text="*{emp.salary}"></td>
+                                    <td th:text="*{emp.toString()}"></td>
+                                    <td>
+                                        <button th:href="@{/admin/employee-update/{id}(id=${emp.id})}"
+                                                onclick="window.location.href=(this.getAttribute('href'))">Update
+                                        </button>
+                                        <button th:href="@{/admin/employee-delete/{id}(id=${emp.id})}"
+                                                onclick="window.location.href=(this.getAttribute('href'))">Delete
+                                        </button>
+                                    </td>
+                                </tr>
+
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+
+<!-- ******************************************************************************************************* -->
+<!-- ******************************************************************************************************* -->
+
 
 <script src="/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 </body>
 </html>
