--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,6 +39,16 @@
                 <button type="button" class="btn btn-primary text-start" style="border-radius: 2px">
                     User
                 </button>
+
+                    <ul class="nav nav-pills">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="/user">Активная</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Ссылка</a>
+                        </li>
+                    </ul>
+
                 <h6><a href="/logout" style="text-decoration:none;color: #462222">Logout</a></h6>
             </div>
         </div>
@@ -57,7 +67,7 @@
                     <caption></caption>
                     <thead>
                     <tr>
-                        <th scope="col">ID</th>
+
                         <th scope="col">First Name</th>
                         <th scope="col">Last Name</th>
                         <th scope="col">Age</th>
@@ -84,64 +94,8 @@
 </main>
 
 
-<!--
-<div class="container-fluid">
-<div class="row">
-    <div class="col">
 
 
-    <div class="container-fluid gx-0" style="height: 850px">
-        <div class="row bg-light " style="height: 100%">
-            <div class="col-md-2 gy-3 bg-body px-0">
-                <div class="d-grid gap-2">
-                    <button type="button" class="btn btn-primary text-start" style="border-radius: 2px">
-                        User
-                    </button>
-                </div>
-            </div>
-
-            <div class="col-md-10 gy-4 px-4">
-                &lt;!&ndash; the follow column is for table&ndash;&gt;
-                <div class="col-12">
-                    User information page
-                </div>
-                <div class="col-12 bg-light border border-bottom-0">
-                    <h6 class="ps-3 py-2 m-0 first-table">About user</h6>
-                </div>
-                <div class="col-12 bg-body border px-3 pb-3">
-                    <table class="table caption-top table-striped table-hover
-                        bg-body table-borderless border-top">
-                        <caption></caption>
-                        <thead>
-                        <tr>
-                            <th scope="col">ID</th>
-                            <th scope="col">First Name</th>
-                            <th scope="col">Last Name</th>
-                            <th scope="col">Age</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Role</th>
-                        </tr>
-                        </thead>
-
-                        <tbody>
-                        <tr class="table-active border-top">
-                            <td>1</td>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
-                            <td>@mdo</td>
-                            <td>@mdo</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
-</div>
--->
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
