--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -13,7 +13,19 @@
 <!-- ********************************************* Nav bar ************************************************* -->
 
 <header>
-    <div th:insert="header :: copy"></div>
+    <div class="row text-bg-dark py-2 m-0" style="color: papayawhip">
+        <div class="col-6">
+            <h6 class="nav-item">
+                <span  sec:authentication="name"></span> with roles: <span th:text="${employees}"></span>
+            </h6>
+        </div>
+        <div class="col-6 text-end">
+            <form th:action="@{/logout}" method="POST">
+                <!--<input type="submit" value="Logout"/>-->
+                <h6><a href="/logout" style="text-decoration:none;color: gray">Logout</a></h6>
+            </form>
+        </div>
+    </div>
 </header>
 
 <!-- ******************************************************************************************************* -->
@@ -24,11 +36,19 @@
         <div class="row bg-light " style="height: 100%">
             <div class="col-2  bg-body px-0 pt-3">
                 <div class="d-grid">
-                    <button type="button" class="btn btn-primary text-start"
+                    <!--<button type="button" class="btn btn-primary text-start"
                             style="border-radius: 2px" onclick=window.location.href='/user'>
                         User
                     </button>
-                    <input type="button" value="Add" onclick="window.location.href='/admin/employee-create'"/>
+                    <input type="button" value="Add" onclick="window.location.href='/admin/employee-create'"/>-->
+                        <ul class="nav nav-pills">
+                            <li class="nav-item mb-2">
+                                <a class="nav-link active" aria-current="page" href="#">Активная</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/admin/employees">Ссылка</a>
+                            </li>
+                        </ul>
                 </div>
             </div>
 
