--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -3,6 +3,7 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5" lang="en">
 <head>
     <title>Profile</title>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -16,12 +17,13 @@
     <div class="row text-bg-dark py-2 m-0" style="color: papayawhip">
         <div class="col-6">
             <h6 class="nav-item">
-                <span  sec:authentication="name"></span> with roles: <span th:text="${employees}"></span>
+                <b sec:authentication="name"></b> <b>with roles</b>: <span
+                    th:text="${#authorization.authentication.getAuthorities()}"></span>
+
             </h6>
         </div>
         <div class="col-6 text-end">
             <form th:action="@{/logout}" method="POST">
-                <!--<input type="submit" value="Logout"/>-->
                 <h6><a href="/logout" style="text-decoration:none;color: gray">Logout</a></h6>
             </form>
         </div>
@@ -35,20 +37,9 @@
     <div class="container-fluid" style="height: 850px">
         <div class="row bg-light " style="height: 100%">
             <div class="col-2  bg-body px-0 pt-3">
-                <div class="d-grid">
-                    <!--<button type="button" class="btn btn-primary text-start"
-                            style="border-radius: 2px" onclick=window.location.href='/user'>
-                        User
-                    </button>
-                    <input type="button" value="Add" onclick="window.location.href='/admin/employee-create'"/>-->
-                        <ul class="nav nav-pills">
-                            <li class="nav-item mb-2">
-                                <a class="nav-link active" aria-current="page" href="#">Активная</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/admin/employees">Ссылка</a>
-                            </li>
-                        </ul>
+                <div class="nav nav-pills flex-column">
+                    <a class="nav-link" href="/admin/employees">Admin</a>
+                    <a class="nav-link active" aria-current="page" href="#">User</a>
                 </div>
             </div>
 
@@ -83,7 +74,7 @@
                             <td th:text="${employees.surName}"></td>
                             <td th:text="${employees.department}"></td>
                             <td th:text="${employees.salary}"></td>
-                            <td th:text="${employees.roles}"></td>
+                            <td th:text="${employees.toString()}"></td>
                         </tr>
                         </tbody>
                     </table>
