--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -72,9 +72,9 @@
                             <td th:text="${employees.id}"></td>
                             <td th:text="${employees.name}"></td>
                             <td th:text="${employees.surName}"></td>
-                            <td th:text="${employees.department}"></td>
-                            <td th:text="${employees.salary}"></td>
-                            <td th:text="${employees.toString()}"></td>
+                            <td th:text="${employees.email}"></td>
+                            <td th:text="${employees.age}"></td>
+                            <td th:text="${employees.getPureRoles()}"></td>
                         </tr>
                         </tbody>
                     </table>
