--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href="/static/css/myClass.css" rel="stylesheet">
+    <link href="/static/css/myClass.css" rel="stylesheet">
 
 </head>
 <body>
@@ -17,58 +18,43 @@
 
 
 
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-one">
+    Launch demo modal
+</button>
+ff
 
-<div class="col-12 bg-light border border-bottom-0">
-    <h6 class="ps-3 py-2 m-0 first-table">Add new user</h6>
-</div>
-<!--the wrapper div for form controls-->
-<div class="col-12 bg-body border px-3 pb-3">
-
-    <div class="col-4 offset-4 px-3 mt-4">
-
-        <form class="text-center fw-bold">
-            <div class="mb-3">
-                <label for="FirstName" class="form-label mb-0">First name</label>
-                <input type="text" class="form-control" id="FirstName">
-            </div>
-
-            <div class="mb-3">
-                <label for="LastName" class="form-label mb-0">Last name</label>
-                <input type="text" class="form-control" id="LastName">
-            </div>
-
-            <div class="mb-3">
-                <label for="age" class="form-label mb-0">Age</label>
-                <input type="number" class="form-control" id="age">
-            </div>
-
-            <div class="mb-3">
-                <label for="email" class="form-label mb-0">Email</label>
-                <input type="email" class="form-control" id="email">
-            </div>
-
-            <div class="mb-3">
-                <label for="password" class="form-label mb-0">Password</label>
-                <input type="password" class="form-control" id="password">
-            </div>
-
-            <label for="role" class="form-label mb-0">Role</label>
-            <select class="form-select mb-3" size="2" multiple aria-label="multiple select example" id="role">
-                <option value="1">ADMIN</option>
-                <option value="2">ROLE</option>
-            </select>
-
-
-            <button type="submit" class="btn btn-success ">Add new user</button>
-        </form>
+<div class="modal" id="modal-one" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-header">
+            <h2>Modal in CSS?</h2>
+            <a href="#close" class="btn-close" aria-hidden="true">×fdfdffffffd</a> <!-- Изменяем на "#close"-->
+        </div>
+        <div class="modal-body">
+            <p>One modal example here! :D</p>
+        </div>
+        <div class="modal-footer">
+            <a href="#close" class="btn">Nice!</a>  <!--Изменяем на "#close"-->
+        </div>
     </div>
-
 </div>
 
-
-
-
-
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                ...
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
